<resources>
    <string name="app_name">EventPro</string>
    <string name="text_settings">Settings</string>
    <string name="text_profile">Profile</string>
    <string name="text_information">Information</string>
    <string name="text_map">Map</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_password">Password must be at least 8 characters long</string>
    <string name="error_password_mismatch">The passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register</string>
    <string name="text_login">Log In</string>
    <string name="text_profile_settings">Profile Settings</string>
    <string name="text_name">Name</string>
    <string name="text_city">City</string>
    <string name="action_done">Done</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="title_register">Register</string>
    <string name="text_location">Location</string>
    <string name="text_about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_delete">Map</string>
    <string name="text_about_me">About Me</string>
    <string name="text_interests">Interests</string>
    <string name="text_create_event">Create an event</string>
    <string name="text_title">Title</string>
    <string name="text_date_and_time">Date and Time</string>
    <string name="text_cost">Cost</string>
    <string name="text_more">More</string>
    <string name="unknown">Unknown error</string>
    <string name="text_sign_in_sign_up">Sign In/Sign Up</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="signin_failed">unable to sign in</string>
    <string name="signin_success">Hello, </string>
    <string name="signout_failed">unable to sign out</string>
    <string name="signout_success">signed out</string>
    <string name="prompt_enter_message">Enter message</string>
</resources>
