<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account"
            android:title="@string/text_profile" />
        <item
            android:id="@+id/sign_in_sign_up"
            android:icon="@drawable/ic_login"
            android:title="@string/text_sign_in_sign_up"/>
        <!--<item-->
            <!--android:id="@+id/sign_out"-->
            <!--android:icon="@drawable/ic_login"-->
            <!--android:title="@string/text_sign_out"/>-->
        <item
            android:id="@+id/information"
            android:icon="@drawable/ic_info"
            android:title="@string/text_information"/>
        <item
            android:id="@+id/check_sign_in"
            android:icon="@drawable/ic_info"
            android:title="Check Sign In Status"/>
    </group>

</menu>