<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/text_profile_settings"
        app:titleTextColor="?android:attr/colorBackground" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                android:id="@+id/button_select_photo"
                android:layout_width="200dp"
                android:layout_height="202dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/image_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:contentDescription="profile picture"
                    android:foreground="@drawable/ic_add_photo"
                    android:foregroundGravity="center"
                    android:tint="@color/gray_tint"
                    app:srcCompat="@drawable/test_profile_pic" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="4dp"
                android:text="@string/text_name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Jon Hassel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="4dp"
                android:text="@string/text_location" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Tallahassee" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>